--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 * {
   margin: 0px;
   padding: 0px;
-  font-family: sans-serif;
+  font-family: 'Poppins',sans-serif;
   box-sizing: border-box;
+}
+
+html{
+  scroll-behavior: smooth;
 }
 
 body {
   background: #080808;
-  color: white;
+  color: #fff;
 }
 
 #header {
@@ -16,29 +20,22 @@ body {
   background-image: url(./images/bgc.png);
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
 }
 
 .container {
-  padding: 10px 13%;
+  padding: 10px 10%;
 }
 
 nav {
-  margin: 0;
-  padding: 0px 13%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-  width: 100%;
-  float: right;
-  height: 10vh;
-  background-color: black;
+  background: #080808;
 }
 
 .logo {
-  width: 240px;
-  float: left;
+  width: 140px;
 }
 
 nav ul li {
@@ -50,7 +47,7 @@ nav ul li {
 nav ul li a {
   color: #fff;
   text-decoration: none;
-  font-size: 28px;
+  font-size: 18px;
   position: relative;
 }
 
@@ -75,9 +72,8 @@ nav ul li a:hover::after {
 }
 
 .header-text h1 {
-  font-size: 80px;
+  font-size: 60px;
   margin-top: 20px;
-  margin-bottom: 20px;
 }
 
 .header-text p {
@@ -93,7 +89,6 @@ nav ul li a:hover::after {
 #about {
   padding: 80px 0;
   color: #ababab;
-  margin-top: 5%;
 }
 
 .row {
@@ -119,17 +114,10 @@ nav ul li a:hover::after {
   font-size: 60px;
   font-weight: 600;
   color: #fff;
-  margin-bottom: 20px;
 }
 
 .sub-title p {
   margin-bottom: 20px;
-}
-
-.tab {
-  background: #262626;
-  padding: 10px;
-  border-radius: 10px;
 }
 
 .tab-titles {
@@ -166,7 +154,7 @@ nav ul li a:hover::after {
 }
 
 .tab-contents ul li span {
-  color: #ffe84f;
+  color: #b54769;
   font-size: 14px;
 }
 
@@ -182,7 +170,6 @@ nav ul li a:hover::after {
 
 #services {
   padding: 30px 0;
-  margin-top: 5%;
 }
 
 .services-list {
@@ -221,16 +208,14 @@ nav ul li a:hover::after {
 }
 
 .services-list div:hover {
-  background: #ffe84f;
+  background: #b54769;
   transform: translateY(-10px);
-  color: #080808;
 }
 
 /*------------------------portfolio-------------------------------*/
 
 #portfolio {
   padding: 50px 0;
-  margin-top: 5%;
 }
 
 .work-list {
@@ -256,7 +241,7 @@ nav ul li a:hover::after {
 .layer {
   width: 100%;
   height: 0;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), #ffe84f);
+  background: linear-gradient(rgba(0, 0, 0, 0.6), #ff004f);
   border-radius: 10px;
   position: absolute;
   left: 0;
@@ -265,9 +250,9 @@ nav ul li a:hover::after {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
-  padding: 0 40px;
+   padding: 0 40px;
   text-align: center;
+  flex-direction: column;
   font-size: 14px;
   transition: height 0.5s;
 }
@@ -302,7 +287,7 @@ nav ul li a:hover::after {
   display: block;
   margin: 50px auto;
   width: fit-content;
-  border: 1px solid #ffe84f;
+  border: 1px solid #ff004f;
   padding: 14px 50px;
   border-radius: 6px;
   text-decoration: none;
@@ -311,20 +296,17 @@ nav ul li a:hover::after {
 }
 
 .btn:hover {
-  background: #ffe84f;
-  color: #080808;
+  background: #ff004f;
 }
 
 /*------------------------contact-------------------------------*/
 
 .contact-left {
   flex-basis: 35%;
-  margin-top: 5%;
 }
 
 .contact-right {
   flex-basis: 60%;
-  margin-top: 5%;
 }
 
 .contact-left p {
@@ -332,7 +314,7 @@ nav ul li a:hover::after {
 }
 
 .contact-left p i {
-  color: #ffe84f;
+  color: #ff004f;
   margin-right: 15px;
   font-size: 25px;
 }
@@ -351,14 +333,13 @@ nav ul li a:hover::after {
 }
 
 .social-icons a:hover {
-  color: #ffe84f;
+  color: #ff004f;
   transform: translateY(-5px);
 }
 
 .btn.btn2 {
   display: inline-block;
-  background: #ffe84f;
-  color: #080808;
+  background: #ff004f;
 }
 
 .contact-right form {
@@ -383,7 +364,6 @@ form .btn2 {
   font-size: 18px;
   margin-top: 20px;
   cursor: pointer;
-  color: #080808;
 }
 
 .copyright {
@@ -403,22 +383,18 @@ nav .fas {
 
 @media only screen and (max-width: 600px) {
   #header {
-    background-image: url(./images/phone-background.png);
+    background-image: url(./images/test.png);
     background-position: 0px;
     background-repeat: no-repeat;
   }
 
   .header-text {
-    margin-top: 50%;
+    margin-top: 100%;
     font-size: 16px;
   }
 
   .header-text h1 {
-    font-size: 60px;
-  }
-
-  .logo {
-    width: 140px;
+    font-size: 30px;
   }
 
   nav .fas {
@@ -427,7 +403,7 @@ nav .fas {
   }
 
   nav ul {
-    background: #ffe84f;
+    background: #ff004f;
     position: fixed;
     top: 0;
     right: -200px;
@@ -479,9 +455,5 @@ nav .fas {
 
   .copyright {
     font-size: 14px;
-  }
-
-  #sidemenu li a {
-    color: #080808;
   }
 }
