--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 * {
   margin: 0px;
   padding: 0px;
-  font-family: 'Poppins',sans-serif;
+  font-family: "Kanit", sans-serif;
   box-sizing: border-box;
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
@@ -17,7 +17,7 @@ body {
 #header {
   width: 100%;
   height: 100vh;
-  background-image: url(./images/bgc.png);
+  background-image: url(./images/user.png);
   background-size: cover;
   background-position: center;
 }
@@ -35,7 +35,7 @@ nav {
 }
 
 .logo {
-  width: 140px;
+  width: 100px;
 }
 
 nav ul li {
@@ -47,8 +47,9 @@ nav ul li {
 nav ul li a {
   color: #fff;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 22px;
   position: relative;
+  transition: 0.2s;
 }
 
 nav ul li a::after {
@@ -57,8 +58,8 @@ nav ul li a::after {
   height: 3px;
   background: #ffe84f;
   position: absolute;
-  left: 0;
-  bottom: -6px;
+  left: 0px;
+  bottom: -8px;
   transition: 0.5s;
 }
 
@@ -250,7 +251,7 @@ nav ul li a:hover::after {
   display: flex;
   align-items: center;
   justify-content: center;
-   padding: 0 40px;
+  padding: 0 40px;
   text-align: center;
   flex-direction: column;
   font-size: 14px;
