--- a/style.css
+++ b/style.css
@@ -5,19 +5,20 @@
   box-sizing: border-box;
 }
 
-:root{
-  --background-color:#1f242d;
-  --second-color:#323946;
-  --main-color:#0fff;
-  --text-color:#0ef;
+:root {
+  --background-color: #1f242d;
+  --second-color: #323946;
+  --text-color: #fff;
+  --main-color: #0ef;
 }
+
 html {
   scroll-behavior: smooth;
 }
 
 body {
   background: var(--background-color);
-  color: var(--main-color);
+  color: var(--text-color);
 }
 
 #header {
@@ -33,6 +34,8 @@ body {
 }
 
 nav {
+  position: sticky;
+  top: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
