--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 * {
   margin: 0px;
   padding: 0px;
-  font-family: "Kanit", sans-serif;
+  font-family: "Mulish", sans-serif;
+  text-decoration: none;
+
   box-sizing: border-box;
 }
 
@@ -38,6 +40,8 @@ nav {
 
 nav {
   position: sticky;
+  text-transform: uppercase;
+  letter-spacing: 0.8rem;
   top: 0;
   display: flex;
   align-items: center;
@@ -47,7 +51,7 @@ nav {
 }
 
 .logo {
-  width: 100px;
+  width: 80px;
 }
 
 nav ul li {
@@ -183,15 +187,96 @@ nav ul li a:hover::after {
   display: block;
 }
 
-/*------------------------services-------------------------------*/
+/*------------------------Blog-------------------------------*/
 
-#services {
+.blog-box:hover {
+  transform: translateY(-20px);
+}
+
+.blog-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.blog-box {
+  width: 350px;
+  background-color: #fff;
+  border: 1px solid #ececec;
+  margin: 3rem;
+  transition: 0.9s;
+}
+
+.blog-img {
+  width: 100%;
+  height: 35rem;
+}
+
+.blog-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.blog-text {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.blog-text span {
+  color: red;
+  font-size: 0.9rem;
+}
+.blog-text .blog-title {
+  font-size: 1.3rem;
+  font-weight: 500;
+  color: #272727;
+}
+.blog-text .blog-title:hover {
+  color: red;
+  transition: all ease 0.5s;
+}
+
+.blog-text p {
+  color: #272727;
+  font-size: 1rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 20px 0px;
+}
+
+.blog-text .read-more {
+  color: #0f0f0f;
+  font-size: 1rem;
+  transition: all ease 0.5s;
+}
+.blog-text .read-more:hover {
+  color: #6ee7b7;
+  font-size: 1rem;
+}
+
+.read-little {
+  display: none;
+}
+
+.blog-text p.expanded {
+  -webkit-line-clamp: unset;
+  overflow: visible;
+}
+
+/* #services {
   padding: 3rem 0;
 }
 
 .services-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   grid-gap: 4rem;
   margin-top: 5rem;
 }
@@ -203,6 +288,11 @@ nav ul li a:hover::after {
   font-weight: 300;
   border-radius: 1rem;
   transition: background 0.5s, transform 0.5s;
+}
+
+.services-list img {
+  width: 100%;
+  height: auto;
 }
 
 .services-list div i {
@@ -227,7 +317,7 @@ nav ul li a:hover::after {
 .services-list div:hover {
   background: #b54769;
   transform: translateY(-10px);
-}
+} */
 
 /*------------------------portfolio-------------------------------*/
 
@@ -258,7 +348,7 @@ nav ul li a:hover::after {
 .layer {
   width: 100%;
   height: 0;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), #ff004f);
+  background: linear-gradient(rgba(0, 0, 0, 0.6), var(--main-color));
   border-radius: 1rem;
   position: absolute;
   left: 0;
@@ -304,7 +394,7 @@ nav ul li a:hover::after {
   display: block;
   margin: 5rem auto;
   width: fit-content;
-  border: 1px solid #ff004f;
+  border: 1px solid var(--main-color);
   padding: 1.4rem 5rem;
   border-radius: 0.6rem;
   text-decoration: none;
@@ -313,7 +403,7 @@ nav ul li a:hover::after {
 }
 
 .btn:hover {
-  background: #ff004f;
+  background: var(--main-color);
 }
 
 /*------------------------contact-------------------------------*/
@@ -331,7 +421,7 @@ nav ul li a:hover::after {
 }
 
 .contact-left p i {
-  color: #ff004f;
+  color: var(--main-color);
   margin-right: 1.25rem;
   font-size: 2.5rem;
 }
@@ -350,13 +440,13 @@ nav ul li a:hover::after {
 }
 
 .social-icons a:hover {
-  color: #ff004f;
+  color: var(--main-color);
   transform: translateY(-5px);
 }
 
 .btn.btn2 {
   display: inline-block;
-  background: #ff004f;
+  background: var(--main-color);
 }
 
 .contact-right form {
@@ -397,8 +487,28 @@ form .btn2 {
 nav .fas {
   display: none;
 }
+@media only screen and (max-width: 1250px) {
+  nav {
+    letter-spacing: 0.3rem;
+  }
+  nav ul li a {
+    font-size: 1.45rem;
+    font-weight: 600;
+    transition: 0.2s;
+  }
 
-@media only screen and (max-width: 600px) {
+  .logo {
+    width: 50px;
+  }
+
+  nav ul li {
+    display: inline-block;
+    list-style: none;
+    margin: 1rem 2rem;
+  }
+}
+
+@media only screen and (max-width: 850px) {
   #header {
     background-image: url(./images/test.png);
     background-position: 0px;
@@ -414,20 +524,22 @@ nav .fas {
     font-size: 3rem;
   }
 
+  ul#sidemenu li a {
+    font-size: 1.5rem;
+  }
   nav .fas {
     display: block;
     font-size: 2.5rem;
   }
 
   nav ul {
-    background: #ff004f;
+    background: linear-gradient(80deg, var(--main-color), #1f242d);
     position: fixed;
     top: 0;
-    right: -2rem;
-    width: 2rem;
+    right: -20rem;
+    width: 18rem;
     height: 100vh;
     padding-top: 5rem;
-    z-index: 2;
     transition: right 0.5s;
   }
 
