Added blog change nav bar

--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@
 
 :root {
   --background-color: #1f242d;
-  --second-color: #323946;
-  --text-color: #fff;
-  --main-color: #6ee7b7;
+  --second-color: #2e8b57;
+  --text-color: #ffffff;
+  --main-color: #ff4500;
 }
 
 html {
