--- a/style.css
+++ b/style.css
@@ -173,12 +173,12 @@ nav ul li a:hover::after {
   flex-basis: 50%;
 }
 
-.about-text{
+.about-text {
   width: 40rem;
   text-align: justify;
   letter-spacing: 1.5px;
   line-height: 2em;
-  padding:2% 0;
+  padding: 2% 0;
 }
 
 .sub-title {
@@ -251,7 +251,7 @@ nav ul li a:hover::after {
 }
 
 .blog-box {
-  width: 350px;
+  width: 420px;
   background-color: #fff;
   border: 1px solid #ececec;
   margin: 3rem;
@@ -260,7 +260,7 @@ nav ul li a:hover::after {
 
 .blog-img {
   width: 100%;
-  height: 35rem;
+  height: 40rem;
 }
 
 .blog-img img {
@@ -520,12 +520,29 @@ nav ul li a:hover::after {
 
 /*------------------------contact-------------------------------*/
 
+#contact {
+  height: 75vh;
+}
+#contact .container {
+  padding: 0 20%;
+}
+
+#contact .container .row {
+  justify-content: center;
+}
+#contact .container .row h1 {
+  font-size: 4rem;
+  margin-top: 1.2rem;
+}
+
 .contact-left {
-  flex-basis: 35%;
+  width: 35%;
+  display: flex;
+  flex-direction: column;
 }
 
 .contact-right {
-  flex-basis: 60%;
+  width: 50%;
 }
 
 .contact-left p {
@@ -603,7 +620,7 @@ nav .fas {
   display: none;
 }
 
-@media only screen and (max-width: 1250px) {
+@media only screen and (max-width: 1200px) {
   .logo {
     width: 50px;
   }
@@ -695,7 +712,7 @@ nav .fas {
     flex-basis: 100%;
   }
 
-  .about-col-1 img{
+  .about-col-1 img {
     margin: 0;
     width: 60%;
   }
@@ -711,8 +728,7 @@ nav .fas {
     font-size: 1.4rem;
     text-align: center;
   }
-  .tab-titles{
-    
+  .tab-titles {
     width: 445px;
     padding: 5% 0;
     margin: 0 auto;
@@ -722,7 +738,7 @@ nav .fas {
     left: 25px;
   }
 
-  .about-text{
+  .about-text {
     margin: 0 auto;
     width: 70%;
   }
@@ -731,7 +747,6 @@ nav .fas {
     font-size: 2.2rem;
     margin-right: 2rem;
     padding: 0 25px;
-   
   }
 
   .contact-left,
