--- a/style.css
+++ b/style.css
@@ -280,7 +280,7 @@ nav ul li a:hover::after {
   transition: all ease 0.5s;
 }
 .blog-text .read-more:hover {
-  color: #6ee7b7;
+  color: var(--main-color);
   font-size: 1rem;
 }
 
