--- a/style.css
+++ b/style.css
@@ -91,13 +91,11 @@ nav ul li a:hover::after {
 
 .header-content {
   display: flex;
-  justify-content: space-between;
 }
 
 .header-text {
-  width: 50%;
-  margin-top: 10%;
-  font-size: 3rem;
+  width: 60%;
+  margin-top: 7%;
 }
 
 .header-text h1 {
@@ -107,6 +105,10 @@ nav ul li a:hover::after {
 
 .header-text p {
   color: var(--main-color);
+  font-size: 2.2rem;
+  text-align: justify;
+  letter-spacing: 0.1rem;
+  line-height: 2em;
 }
 
 .header-text h1 span {
@@ -114,7 +116,12 @@ nav ul li a:hover::after {
 }
 
 .header-img {
-  width: 40%;
+  flex-basis: 30%;
+}
+
+.header-text {
+  padding-left: 15%;
+  flex-basis: 50%;
 }
 
 /***************************** About ********************************/
@@ -447,6 +454,7 @@ nav ul li a:hover::after {
 /*------------------------contact-------------------------------*/
 
 #contact {
+  margin-top: 5%;
   height: 75vh;
 }
 #contact .container {
@@ -558,22 +566,6 @@ nav .fas {
     list-style: none;
     margin: 1rem 2rem;
   }
-  #header {
-    height: 70vh;
-  }
-  .moblie-icon {
-    display: block;
-  }
-  .moblie-icon img {
-    width: 300px;
-  }
-  .header-content {
-    display: block;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    height: 500px;
-  }
 
   nav {
     letter-spacing: 0.3rem;
@@ -584,16 +576,42 @@ nav .fas {
     transition: 0.2s;
   }
 
-  .header-text {
-    font-size: 1.6rem;
+  #header .container {
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-
   .header-text h1 {
     font-size: 3rem;
   }
 
   .header-text p {
-    margin-top: 10%;
+    margin-top: 5%;
+    padding-left: 0;
+  }
+
+  .header-content {
+    display: block;
+  }
+
+  .header-img {
+    display: block;
+    text-align: center;
+    padding: 0;
+    margin: 0 auto;
+  }
+  .header-img img {
+    position: relative;
+    width: 40%;
+    top: -2rem;
+  }
+  .header-text {
+    font-size: 1.6rem;
+    padding: 0;
+
+    display: block;
+    margin: 0 auto;
   }
 
   ul#sidemenu li a {
