--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
   --second-color: #382c1ba4;
   --text-color: #ffffff;
   --main-color: #ff4500;
+  --accent: cyan;
 }
 
 html {
@@ -26,6 +27,42 @@ body {
 .container,
 nav {
   padding: 1rem 15%;
+}
+
+/***************************** Global Button ********************************/
+
+.button {
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-decoration: none;
+  position: relative;
+}
+
+.shape {
+  fill: transparent;
+  stroke: var(--main-color);
+  stroke-dasharray: 50 300;
+  stroke-dashoffset: 145;
+  stroke-width: 5px;
+  transition: stroke-width 0.3s, stroke-dashoffset 0.3s, stroke-dasharray 0.9s;
+}
+
+.shape:hover {
+  stroke-width: 2px;
+  stroke-dashoffset: 0;
+  stroke-dasharray: 760;
+}
+
+.text {
+  font-size: 1.2rem;
+  line-height: 1rem;
+  letter-spacing: 0.3rem;
+  color: var(--text-color);
+  top: -1.75rem;
+  position: relative;
+  pointer-events: none;
 }
 
 /***************************** nav ********************************/
@@ -81,6 +118,8 @@ nav ul li a:hover::after {
   width: 100%;
 }
 
+/***************************** Home ********************************/
+
 #header {
   width: 100%;
   height: 90vh;
@@ -91,24 +130,31 @@ nav ul li a:hover::after {
 
 .header-content {
   display: flex;
+  justify-content: space-evenly;
 }
 
+.header-text-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 .header-text {
-  width: 60%;
-  margin-top: 7%;
+  width: 50%;
+  margin: 7% 0 50px 20px;
 }
-
 .header-text h1 {
   font-size: 6rem;
-  margin-top: 2rem;
+  margin: 2rem 0;
+  color: var(--text-color);
 }
 
 .header-text p {
-  color: var(--main-color);
+  color: var(--text-color);
   font-size: 2.2rem;
-  text-align: justify;
   letter-spacing: 0.1rem;
-  line-height: 2em;
+  line-height: 1em;
+  margin: 5% 0;
 }
 
 .header-text h1 span {
@@ -116,14 +162,24 @@ nav ul li a:hover::after {
 }
 
 .header-img {
-  flex-basis: 30%;
+  margin-top: 5%;
 }
 
-.header-text {
-  padding-left: 15%;
-  flex-basis: 50%;
+.header-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
+.multiple-text {
+  display: flex;
+  align-items: center;
+  width: 400px;
+  font-size: xx-large;
+  color: var(--main-color);
+  font-weight: 700;
+}
 /***************************** About ********************************/
 
 #about {
@@ -254,6 +310,7 @@ nav ul li a:hover::after {
 }
 
 .blog-box {
+  border-radius: 30px;
   width: 420px;
   background-color: #fff;
   border: 1px solid #ececec;
@@ -267,6 +324,7 @@ nav ul li a:hover::after {
 }
 
 .blog-img img {
+  border-radius: 30px 30px 0 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -314,8 +372,10 @@ nav ul li a:hover::after {
   font-size: 1rem;
 }
 
-.read-little {
+span.read-little {
   display: none;
+  font-weight: bold;
+  font-size: 1.2rem;
 }
 
 .blog-text p.expanded {
@@ -576,44 +636,6 @@ nav .fas {
     transition: 0.2s;
   }
 
-  #header .container {
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .header-text h1 {
-    font-size: 3rem;
-  }
-
-  .header-text p {
-    margin-top: 5%;
-    padding-left: 0;
-  }
-
-  .header-content {
-    display: block;
-  }
-
-  .header-img {
-    display: block;
-    text-align: center;
-    padding: 0;
-    margin: 0 auto;
-  }
-  .header-img img {
-    position: relative;
-    width: 40%;
-    top: -2rem;
-  }
-  .header-text {
-    font-size: 1.6rem;
-    padding: 0;
-
-    display: block;
-    margin: 0 auto;
-  }
-
   ul#sidemenu li a {
     font-size: 1.5rem;
   }
@@ -643,6 +665,48 @@ nav .fas {
     top: 2.5rem;
     left: 2.5rem;
     cursor: pointer;
+  }
+
+  #header .container {
+    padding: 0;
+    display: flex;
+    height: 90vh;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+  }
+  .header-text h1 {
+    font-size: 3rem;
+  }
+
+  .header-text p {
+    margin-top: 5%;
+    padding-left: 0;
+  }
+
+  .header-content {
+    display: block;
+  }
+
+  .header-img {
+    display: block;
+    text-align: center;
+    padding: 0;
+    margin: 0 auto;
+  }
+  .header-img img {
+    width: 40%;
+  }
+  .header-text {
+    font-size: 1.6rem;
+    padding: 0;
+
+    display: block;
+    margin: 0 auto;
+  }
+
+  .multiple-text {
+    width: 200px;
   }
 
   .sub-title {
